--- a/css/style.css
+++ b/css/style.css
@@ -478,7 +478,7 @@ h6 { font-size: 16px; }
 	font-family: "Montserrat";
 }
 .arlo_tm_hero .name_holder h3 span{
-	color: #e65f78;
+	color: #fbb827;
 }
 .arlo_tm_hero .text_typing p{
 	color: #fff;
@@ -608,13 +608,13 @@ h6 { font-size: 16px; }
 	font-size: 20px;
 	font-weight: 600;
 }
-.arlo_tm_about .right .about_title h3 .arlo_tm_animation_text_word{color: #e65f78;}
+.arlo_tm_about .right .about_title h3 .arlo_tm_animation_text_word{color: #fbb827;}
 .arlo_tm_about .right .text{
 	margin-bottom: 23px;
 	float: left;
 }
 .arlo_tm_about .right .text span{
-	color: #e65f78;
+	color: #fbb827;
 	font-style: italic;
 }
 .arlo_tm_about .about_short_contact_wrap{
